z-index and name fix

--- a/src/app/reusablecomponents/navbar/nav.scss
+++ b/src/app/reusablecomponents/navbar/nav.scss
@@ -66,6 +66,7 @@ nav{
             display: flex;
             justify-content: end;
             align-items: center;
+            z-index: 5;
 
             .bi-x-lg{
                 opacity: 1;
@@ -76,7 +77,7 @@ nav{
                 color: var(--color-regular-text);
                 cursor: pointer;
                 font-size: 1.8em;
-                z-index: 2;
+                z-index: 6;
             }
 
 
